[package]
name = "nanite_dispersion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12.0"
bevy_rapier2d = "0.23.0"
rand = "0.8.5"
bevy_rapier_collider_gen = "0.3.1"